@@ -28,6 +28,7 @@ Version 0.6.0~dev
 	* Fix DV video muxing with omneon tools.
 	* Add standard fps attributes to AVInfo class.
 	* Support simple mpeg2 transcode in ffmpeg worker, closes: #5898.
+	* Support mpeg ps muxing in ffmpeg worker.
 
 Version 0.5.0 Released on 2012/03/29
 
